Fixed a responsiveness problem on the cv page when on mobile device caused by using url as anchor tags text

--- a/css/cv.css
+++ b/css/cv.css
@@ -8,7 +8,7 @@
   box-sizing: border-box;
 }
 
-body {
+body#cv-body {
   --color: rgba(30, 30, 30);
   --bgColor: rgba(245, 245, 245);
   /* min-height: 100vh; */
